{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 24,
  "lineage": "a50135f0-7a43-1eec-4755-f6097621ccfd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGCurso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:internet-gateway/igw-0d146718017f1fccb",
            "id": "igw-0d146718017f1fccb",
            "owner_id": "361542733177",
            "tags": {
              "Name": "IGCurso"
            },
            "tags_all": {
              "Name": "IGCurso"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "AclPrivada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:network-acl/acl-0734550259b82454c",
            "egress": [],
            "id": "acl-0734550259b82454c",
            "ingress": [],
            "owner_id": "361542733177",
            "subnet_ids": [
              "subnet-0a0272dd8ee0dd9b4",
              "subnet-0e61ddd85545b778e"
            ],
            "tags": {
              "Name": "AclPrivada"
            },
            "tags_all": {
              "Name": "AclPrivada"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.CursoPrivada01",
            "aws_subnet.CursoPrivada02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "AclPublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:network-acl/acl-05dac90462c3c5ba2",
            "egress": [],
            "id": "acl-05dac90462c3c5ba2",
            "ingress": [],
            "owner_id": "361542733177",
            "subnet_ids": [
              "subnet-03758c55059981268",
              "subnet-0564e06a9a0b7e3f6"
            ],
            "tags": {
              "Name": "AclPublica"
            },
            "tags_all": {
              "Name": "AclPublica"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.CursoPublica01",
            "aws_subnet.CursoPublica02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "AclPrivadaInboundRules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1771247195",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0734550259b82454c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.AclPrivada",
            "aws_subnet.CursoPrivada01",
            "aws_subnet.CursoPrivada02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "AclPrivadaOutboundRules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2100799332",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0734550259b82454c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.AclPrivada",
            "aws_subnet.CursoPrivada01",
            "aws_subnet.CursoPrivada02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "AclPublicaInboundRules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2071070397",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05dac90462c3c5ba2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.AclPublica",
            "aws_subnet.CursoPublica01",
            "aws_subnet.CursoPublica02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "AclPublicaOutboundRules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-734925117",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05dac90462c3c5ba2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.AclPublica",
            "aws_subnet.CursoPublica01",
            "aws_subnet.CursoPublica02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTCursoPrivada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:route-table/rtb-0c90e7948a7bd09ca",
            "id": "rtb-0c90e7948a7bd09ca",
            "owner_id": "361542733177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RTCursoPrivada"
            },
            "tags_all": {
              "Name": "RTCursoPrivada"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTCursoPublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:route-table/rtb-07dab4d8648c857fb",
            "id": "rtb-07dab4d8648c857fb",
            "owner_id": "361542733177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d146718017f1fccb",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d146718017f1fccb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTCursoPublica"
            },
            "tags_all": {
              "Name": "RTCursoPublica"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGCurso",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTCursoPrivada01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c826108601ea0d",
            "route_table_id": "rtb-0c90e7948a7bd09ca",
            "subnet_id": "subnet-0e61ddd85545b778e"
          },
          "dependencies": [
            "aws_route_table.RTCursoPrivada",
            "aws_subnet.CursoPrivada01",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTCursoPrivada02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab674a42933dd06c",
            "route_table_id": "rtb-0c90e7948a7bd09ca",
            "subnet_id": "subnet-0a0272dd8ee0dd9b4"
          },
          "dependencies": [
            "aws_route_table.RTCursoPrivada",
            "aws_subnet.CursoPrivada02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTCursoPublica01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0538b335ae57d7043",
            "route_table_id": "rtb-07dab4d8648c857fb",
            "subnet_id": "subnet-03758c55059981268"
          },
          "dependencies": [
            "aws_internet_gateway.IGCurso",
            "aws_route_table.RTCursoPublica",
            "aws_subnet.CursoPublica01",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTCursoPublica02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033cc641ff01e8511",
            "route_table_id": "rtb-07dab4d8648c857fb",
            "subnet_id": "subnet-0564e06a9a0b7e3f6"
          },
          "dependencies": [
            "aws_internet_gateway.IGCurso",
            "aws_route_table.RTCursoPublica",
            "aws_subnet.CursoPublica02",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGWeb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:security-group/sg-08cc9cd621fa33b26",
            "description": "Security group for web app",
            "egress": [],
            "id": "sg-08cc9cd621fa33b26",
            "ingress": [],
            "name": "SGWeb",
            "name_prefix": "",
            "owner_id": "361542733177",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGWindows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:security-group/sg-03d389b790c7fab32",
            "description": "Security group for windows server",
            "egress": [],
            "id": "sg-03d389b790c7fab32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "SGWindows",
            "name_prefix": "",
            "owner_id": "361542733177",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SGHttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Libera Http",
            "from_port": 80,
            "id": "sgrule-1838951849",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc9cd621fa33b26",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SGWeb",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SGHttps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Libera Https",
            "from_port": 443,
            "id": "sgrule-3058846495",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc9cd621fa33b26",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SGWeb",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SGSsh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "189.78.71.177/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2844542046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc9cd621fa33b26",
            "security_group_rule_id": "sgr-06eeb2cb59f72313d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SGWeb",
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CursoPrivada01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:subnet/subnet-0e61ddd85545b778e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e61ddd85545b778e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361542733177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CursoPrivada01"
            },
            "tags_all": {
              "Name": "CursoPrivada01"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CursoPrivada02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:subnet/subnet-0a0272dd8ee0dd9b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0272dd8ee0dd9b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361542733177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CursoPrivada02"
            },
            "tags_all": {
              "Name": "CursoPrivada02"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CursoPublica01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:subnet/subnet-03758c55059981268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03758c55059981268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361542733177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CursoPublica01"
            },
            "tags_all": {
              "Name": "CursoPublica01"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CursoPublica02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:subnet/subnet-0564e06a9a0b7e3f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564e06a9a0b7e3f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361542733177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CursoPublica02"
            },
            "tags_all": {
              "Name": "CursoPublica02"
            },
            "vpc_id": "vpc-01d9f1e3b3810f38b"
          },
          "dependencies": [
            "aws_vpc.Curso"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Curso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361542733177:vpc/vpc-01d9f1e3b3810f38b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e623e8802e79fa1d",
            "default_route_table_id": "rtb-0427c7526539c4878",
            "default_security_group_id": "sg-0a6ecdb238230c25f",
            "dhcp_options_id": "dopt-09e9974c4ffae4a70",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d9f1e3b3810f38b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0427c7526539c4878",
            "owner_id": "361542733177",
            "tags": {
              "Name": "Curso"
            },
            "tags_all": {
              "Name": "Curso"
            }
          }
        }
      ]
    }
  ]
}